force-app/main/default/objects/Opportunity/fields/nd_Reallocated_Date_on_H_S_Credit_del__c.field-meta.xml
<CustomField>
    <fullName>nd_Reallocated_Date_on_H_S_Credit_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator that one of the Hard and Soft Credit records associated with this gift has the Reallocated Date field populated.</description>
    <inlineHelpText>An indicator that one of the Hard and Soft Credit records associated with this gift has the Reallocated Date field populated.</inlineHelpText>
    <label>Reallocated Date on H/S Credit</label>
    <type>Checkbox</type>
</CustomField>