force-app/main/default/objects/Opportunity/fields/nd_Record_Type_and_Amount__c.field-meta.xml
<CustomField>
    <fullName>nd_Record_Type_and_Amount__c</fullName>
    <formula>RecordType.Name + &quot; &quot; + TEXT( Type ) + &quot; - $&quot; + TEXT(Amount)</formula>
    <label>Record Type and Amount</label>
    <type>Text</type>
</CustomField>