force-app/main/default/objects/Opportunity/fields/ND_RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ND_RecordType_DeveloperName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>RecordType DeveloperName</label>
    <type>Text</type>
</CustomField>