force-app/main/default/objects/Opportunity/fields/nd_recurring_payments_left__c.field-meta.xml
<CustomField>
    <fullName>nd_recurring_payments_left__c</fullName>
    <description>The number of payments remaining on a commitment.</description>
    <inlineHelpText>The number of payments remaining on a commitment.</inlineHelpText>
    <label>Recurring Payments Left</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>