force-app/main/default/objects/Opportunity/fields/nd_Recurring_Periodicity__c.field-meta.xml
<CustomField>
    <fullName>nd_Recurring_Periodicity__c</fullName>
    <description>A number field representing the periodicity of recurring gifts.  The number in this field is &quot;12&quot; if someone has monthly payments set up, &quot;4&quot; if someone has quarterly payments set up, etc.</description>
    <inlineHelpText>A number field representing the periodicity of recurring gifts.  The number in this field is &quot;12&quot; if someone has monthly payments set up, &quot;4&quot; if someone has quarterly payments set up, etc.</inlineHelpText>
    <label>Recurring Periodicity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>