force-app/main/default/objects/Opportunity/fields/nd_Research_Award_Number__c.field-meta.xml
<CustomField>
    <fullName>nd_Research_Award_Number__c</fullName>
    <inlineHelpText>Only for CFR</inlineHelpText>
    <label>Research Award Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>