force-app/main/default/objects/Opportunity/fields/ND_Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>ND_Resolution_Description__c</fullName>
    <description>This field tells the resolution description of identify proposal color code</description>
    <inlineHelpText>This field tells the resolution description of identify proposal color code</inlineHelpText>
    <label>Resolution Description</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>