force-app/main/default/objects/Opportunity/fields/nd_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>nd_Short_Description__c</fullName>
    <description>This field tells the short description of identify proposal color code</description>
    <inlineHelpText>This field tells the short description of identify proposal color code</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>