force-app/main/default/objects/Opportunity/fields/nd_Tax_Ack_Code__c.field-meta.xml
<CustomField>
    <fullName>nd_Tax_Ack_Code__c</fullName>
    <label>Tax Ack Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>