force-app/main/default/objects/Opportunity/fields/nd_Total_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>nd_Total_Recurring_Amount__c</fullName>
    <description>Total Annual Amount of Recurring Gift</description>
    <formula>IF(AND(NOT(ISBLANK(nd_Recurring_Periodicity__c)), (nd_initial_recurring_transaction_ind__c = TRUE)) , (nd_Recurring_Periodicity__c * Amount), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Annual Amount of Recurring Gift</inlineHelpText>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>