force-app/main/default/objects/Opportunity/fields/No_SWAG__c.field-meta.xml
<CustomField>
    <fullName>No_SWAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to indicate when a donor does not want a material item associated with a gift.</description>
    <inlineHelpText>Use this field to indicate when a donor does not want a material item associated with a gift.</inlineHelpText>
    <label>No SWAG</label>
    <type>Checkbox</type>
</CustomField>