force-app/main/default/objects/Opportunity/fields/Opportunity_User__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_User__c</fullName>
    <description>Field for current user&apos;s userID</description>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field for current user&apos;s userID</inlineHelpText>
    <label>Opportunity User</label>
    <type>Text</type>
</CustomField>