force-app/main/default/objects/Opportunity/fields/Planned_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Stage_Duration__c</fullName>
    <formula>TODAY() - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Stage Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>