force-app/main/default/objects/Opportunity/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <description>This is the PRM of the donor on an opportunity record.</description>
    <formula>Account.ucinn_ascendv2__PRM__r.FirstName +&quot; &quot;+ Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the PRM of the donor on an opportunity record.</inlineHelpText>
    <label>PRM</label>
    <type>Text</type>
</CustomField>