force-app/main/default/objects/Opportunity/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <defaultValue>IF($RecordType.Name  &lt;&gt; &quot;Proposal&quot;, TODAY(),NULL)</defaultValue>
    <description>Used to track when a gift was received in Donor Services for processing</description>
    <inlineHelpText>Date gift received in processing at UND</inlineHelpText>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>