force-app/main/default/objects/Opportunity/fields/Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling__c</fullName>
    <label>Special Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Reminders-Auto Pay</fullName>
            </value>
            <value>
                <fullName>No Receipt</fullName>
            </value>
            <value>
                <fullName>No Mail</fullName>
            </value>
            <value>
                <fullName>No Reminders-Don&apos;t Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>