force-app/main/default/objects/Opportunity/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the proposal</description>
    <inlineHelpText>Short description, no ask amount.</inlineHelpText>
    <label>Title</label>
    <length>160</length>
    <type>Text</type>
</CustomField>