force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Academic_Support__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Academic_Support__c</fullName>
    <label>Academic Support %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>