force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number__c</fullName>
    <description>Number used to identify the intended account when wiring money using an external payment gateway.</description>
    <inlineHelpText>Number used to identify the intended account when wiring money using an external payment gateway.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>