force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Acknowledgement__c</fullName>
    <label>Acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAF</fullName>
                <label>Donor Advised Fund</label>
            </value>
            <value>
                <fullName>NER</fullName>
                <label>Online eReceipt - No Lettershop Ack</label>
            </value>
            <value>
                <fullName>NFA</fullName>
                <label>No further acknowledgment</label>
            </value>
            <value>
                <fullName>NOT</fullName>
                <label>Do not send any acknowledgment</label>
            </value>
            <value>
                <fullName>SD3</fullName>
                <label>SD3-Special Acknowledgement</label>
            </value>
            <value>
                <fullName>SD6</fullName>
                <label>SD6-IRA</label>
            </value>
            <value>
                <fullName>SGR</fullName>
                <label>Significant Gift Released</label>
            </value>
            <value>
                <fullName>SIG</fullName>
                <label>Significant Gift Hold</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
                <isActive>false</isActive>
                <label>Acknowledged</label>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
                <isActive>false</isActive>
                <label>Do Not Acknowledge</label>
            </value>
            <value>
                <fullName>Not Acknowledged</fullName>
                <isActive>false</isActive>
                <label>Not Acknowledged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>