force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Adjustment_Reason_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_Reason_v1__c</fullName>
    <label>Adjustment Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amount Change</fullName>
            </value>
            <value>
                <fullName>Appeal Code Change</fullName>
                <isActive>false</isActive>
                <label>Appeal Code Change</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
                <isActive>false</isActive>
                <label>Data Entry Error</label>
            </value>
            <value>
                <fullName>Designation Change</fullName>
            </value>
            <value>
                <fullName>Designation Transfer</fullName>
            </value>
            <value>
                <fullName>Development Update</fullName>
            </value>
            <value>
                <fullName>Donor Request</fullName>
            </value>
            <value>
                <fullName>Error - Other</fullName>
            </value>
            <value>
                <fullName>Expired Credit Card</fullName>
                <isActive>false</isActive>
                <label>Expired Credit Card</label>
            </value>
            <value>
                <fullName>Gift Date Change</fullName>
                <isActive>false</isActive>
                <label>Gift Date Change</label>
            </value>
            <value>
                <fullName>Gift Prep Error</fullName>
            </value>
            <value>
                <fullName>Gift Process Error</fullName>
            </value>
            <value>
                <fullName>Gift to Pledge Payment</fullName>
            </value>
            <value>
                <fullName>Gift Type Change</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
                <isActive>false</isActive>
                <label>Insufficient Funds</label>
            </value>
            <value>
                <fullName>Invalid Credit Card Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Credit Card Number</label>
            </value>
            <value>
                <fullName>New Account Designation Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pledge Payment to Gift</fullName>
            </value>
            <value>
                <fullName>Pledge Payment to Pledge Payment</fullName>
                <isActive>false</isActive>
                <label>Pledge Payment to Pledge Payment</label>
            </value>
            <value>
                <fullName>Reallocation</fullName>
            </value>
            <value>
                <fullName>Recognition Change</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>Unsigned Check</fullName>
                <isActive>false</isActive>
                <label>Unsigned Check</label>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>