force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original affiliated Organization tied to this Matching Gift.</description>
    <inlineHelpText>The original affiliated Organization tied to this Matching Gift.</inlineHelpText>
    <label>Affiliated Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Affiliated Organization)</relationshipLabel>
    <relationshipName>Opportunity_Affiliated_Account</relationshipName>
    <type>Lookup</type>
</CustomField>