force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Amount_In_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_In_External_Payment_Gateway__c</fullName>
    <label>Amount In External Payment Gateway</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>