force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Amount_Paid_to_Date_Same_Desig_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_to_Date_Same_Desig_Roll_Up__c</fullName>
    <description>Aggregation of Designation Detail&apos;s Amount Paid to Date Roll up. It is the total amount/face_value paid towards designations listed in the opportunity.</description>
    <label>Amount Paid to Date (Same Designation)</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>