force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Capital_Projects__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Capital_Projects__c</fullName>
    <label>Capital Projects %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>