force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Cardholder_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Cardholder_Encrypted__c</fullName>
    <description>Cardholder for cybersource, only used for when organization paying</description>
    <inlineHelpText>Cardholder for cybersource, only used for when organization paying</inlineHelpText>
    <label>Cardholder</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>