force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Confirmation_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Confirmation_Method__c</fullName>
    <label>Confirmation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email/Online Confirmation</fullName>
            </value>
            <value>
                <fullName>Matching Form Received</fullName>
            </value>
            <value>
                <fullName>Automatic Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>