force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Created_In_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Created_In_External_Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the gift or payment exists in the External payment gateway.</description>
    <inlineHelpText>Denotes that the gift or payment exists in the External payment gateway.</inlineHelpText>
    <label>Created In External Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>