force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Pledges</relationshipLabel>
    <relationshipName>Opportunities_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>