force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Designation_Detail_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Detail_Amount_Roll_Up__c</fullName>
    <description>This needs to be deprecated after record types and make code point to the new Amount__c field.</description>
    <label>Designation Detail Amount</label>
    <summarizedField>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>