force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Disbursement_Processor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disbursement_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who marked this Matching Gift for payment by Disbursement.</description>
    <inlineHelpText>User who marked this Matching Gift for payment by Disbursement.</inlineHelpText>
    <label>Disbursement Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Disbursement_User</relationshipName>
    <type>Lookup</type>
</CustomField>