force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Donor_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_Name_Formula__c</fullName>
    <description>Take Constituent Name or Organization Name - used for Pledge Receivables Report</description>
    <formula>IF ( ISBLANK( ucinn_ascendv2__Contact__c ),  Account.Name,    ucinn_ascendv2__Contact__r.FirstName + &apos; &apos; +  ucinn_ascendv2__Contact__r.LastName  + &apos; &apos; + ucinn_ascendv2__Contact__r.Suffix )</formula>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>